--- a/.github/workflows/app.service
+++ b/.github/workflows/app.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-User=www-data
+User=root
 WorkingDirectory=/opt/app
 ExecStart=/opt/app/app-binary
 Restart=always
